Show attachments on the review screen. Solve the problem by wrapping attachments in its own component

--- a/app/styles/pages/_submit.scss
+++ b/app/styles/pages/_submit.scss
@@ -15,6 +15,10 @@
     @include span-columns(12);
   }
 
+  ul {
+    margin: 0;
+  }
+
   @include media($desktop) {
     .activity-name, .regulation-type, .has-opp, .has-minister-decision {
       @include span-columns(6);
